Add CoerceData to API